Updated css for hint icons and code to output hints in default edit method and add/edit user forms - changes should fix issues with icons wrapping onto separate lines in some browsers, though I can't actually test IE7 or FF on Windows right now (looks good in FF3 Linux, Safari and IE6 under wine).

--- a/www/stylesheets/system/admin.css
+++ b/www/stylesheets/system/admin.css
@@ -27,9 +27,11 @@
 	background-color:#eee;
 	font-weight:bold;
 	padding-left:2px;
-	padding-right:2px;*/
+	padding-right:2px;
 	padding: 0 0 2px 16px;
-	background: url(/speck/images/icons/silk/help.png) no-repeat;
+	background: url(/speck/images/icons/silk/help.png) no-repeat;*/
+	padding: 2px 18px 2px 0;
+	background: transparent url(/speck/images/icons/silk/help.png) no-repeat center right;
 }
 #loading, #saving {
 	font: 12px Verdana, Arial, Helvetica, sans-serif;
